@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-16T16:25:16Z",
+  "timestamp" : "2022-11-17T01:41:49Z",
   "count_outdated" : 2607,
   "uniques_outdated" : 701,
-  "count" : 2628,
+  "count" : 2629,
   "uniques" : 711,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
