@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 7,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
