@@ -1,3 +1,11 @@
+2022-11-17T01:41:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3484623512 # 1035
+* notice: last 14d: unq all: 7 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 701 2607 / 711 2628
+* notice: next accum: outdated-unq outdated-all / unq all: 701 2607 / 711 2629
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-16T16:25:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3481176710 # 1034
 * notice: last 14d: unq all: 7 21
